--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <h1>Welcome to JavaScript</h1>
   <p>This is my first HTML file.</p>
+  <script src ="script.js"></script>
 </body>
 </html>
